test/asm/def-multiple.simple.err
ERROR: def-multiple.asm(18):
    'spam' already defined at def-multiple.asm(10)
ERROR: def-multiple.asm(21):
    syntax error
error: Assembly aborted (2 errors)!
